...
            android:id="@+id/cancelBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_cancel_black_24dp" />

        <ImageButton
            android:id="@+id/homeBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/ic_home_black_24dp" />

        <ImageButton
...
                android:layout_gravity="bottom"
                android:gravity="center|left"
                android:orientation="vertical"
                android:paddingLeft="20dp">

                <EditText
                    android:id="@+id/editNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@null"
                    android:hint="notes or restaurant name"
                    android:maxLength="35"
...
